@@ -1791,6 +1791,29 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_vectra_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.vectra_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.vectra_host }}
+                            {{ form.vectra_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.vectra_secret_key.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.vectra_secret_key }}
+                            {{ form.vectra_secret_key.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.vectra_client_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.vectra_client_id }}
+                            {{ form.vectra_client_id.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
@@ -1855,6 +1878,7 @@
   var api_parser_blacklist = ["cisco_meraki", "defender", "defender_atp", "gsuite_alertcenter", "mongodb",
                               "ms_sentinel", "office_365", "proofpoint_pod", "proofpoint_casb", "safenet",
                               "sophos_cloud", "symantec", "trendmicro_visionone", "waf_cloudflare", "retarus",
+                              "vectra"
                               ];
 
 {% endblock %}
